# modular_project

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
doc/: 1.md  2.md  3.md  4.md  5.md  MANUAL.md  MODULAR_GUIDE.md  pyo.md
src/: __init__.py  connection.py
src/modules/: README.md  __init__.py  base_module.py  cvmath.py  env.py  lfo.py  mixer.py  multiple.py  vca.py  vcf.py  vco.py
tests/manual/: README.md  test_cvmath.py  test_mixer.py  test_multiple.py  test_utils.py  test_vcf_lfo_env.py  test_vco_vca_connection.py
