[project]
name = "constrained-random-modular"
version = "0.1.0"
description = "A sound installation that generates a modular synth-style audio composition with constrained randomness."
requires-python = ">=3.11, <3.12"
dependencies = [
    "pyo",
    "numpy",
    "sounddevice",
]

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.py$'